--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "connected-react-router": "^6.8.0",
     "firebase": "^8.0.0",
     "history": "^4.10.1",
