--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.6.1",
+    "@mui/material": "^5.6.1",
+    "@mui/styled-engine-sc": "^5.6.1",
     "connected-react-router": "^6.8.0",
     "firebase": "^8.0.0",
     "history": "^4.10.1",
@@ -18,6 +23,7 @@
     "moment": "^2.29.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.29.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.2",
